--- a/app/resources/card.html
+++ b/app/resources/card.html
@@ -6,14 +6,17 @@
 <style type="text/css">
 </style>
 
-<div class="card" style="width: 14rem; ">
+<div class="card" style="width: 14rem; height: 14rem;">
     <img class="card-img-top mx-auto d-block" src="{}" style="margin-top:5px; height: 50px;width: 50px;border-radius: 50%;">
-    <div class="card-body">
+    <div class="card-body text-center" style="padding: 0.75rem;padding-top: 0.2rem;">
         <a href="{}" target="_blank">
             <p class="card-title" style="font-size: 14px;">{}</p>
         </a>
         <p class="card-text" style="font-size: 12px;">{}</p>
-        <p class="card-text text-muted" style="font-size: 10px;">{} subscribers</p>
+        <p class="card-text text-muted" style="font-size: 12px;">{} subscribers</p>
+    </div>
+    <div class="progress mx-auto d-block mb-2" style="width: 90%;height: 10px;">
+        <div class="progress-bar" role="progressbar" style="width:{}%;height: 10px;" aria-valuenow="{}" aria-valuemin="0" aria-valuemax="100">{}%</div>
     </div>
 </div>
 <br><br>
